@@ -30,3 +30,4 @@
                        controls to public methods.
   13-Feb-2020    V0.38 Add further uniqueness checks in reformatting Uniprot features.
   18-Feb-2020    V0.39 Add Pfam and InterPro annotation providers
+  18-Feb-2020    V0.40 Handle encoding issues for Py27
